ENG-9277 Quick fix of center align issue

--- a/assets/stylesheets/less/partials/dagView.less
+++ b/assets/stylesheets/less/partials/dagView.less
@@ -260,7 +260,7 @@
 
             .divider {
                 width: 1px;
-                .vertical-align;
+                height: 100%;
                 background-color: @color-border-softGray;
             }
         }
@@ -1473,8 +1473,7 @@
     .divider {
         height: @dagGraphBarHeight - 12px;
         width: 1px;
-        margin: 0px 5px;
-        .vertical-align;
+        margin: auto 5px;
         background-color: @color-border-bar;
     }
 
